--- a/public/index.html
+++ b/public/index.html
@@ -4,153 +4,84 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feedback Form</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-      background: linear-gradient(135deg, #e6e9f0 0%, #eef1f5 100%);
-    }
-    .container {
-      background: #ffffff;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 400px;
-      text-align: center;
-      transition: transform 0.3s ease;
-    }
-    .container:hover {
-      transform: translateY(-5px);
-    }
-    h2 {
-      color: #2c3e50;
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-      font-weight: 600;
-    }
-    .input-group {
-      margin-bottom: 1.2rem;
-      text-align: left;
-    }
-    label {
-      display: block;
-      font-size: 0.9rem;
-      color: #34495e;
-      margin-bottom: 0.3rem;
-      font-weight: 500;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 0.8rem;
-      border: 1px solid #dcdcdc;
-      border-radius: 6px;
-      font-size: 1rem;
-      color: #2c3e50;
-      transition: border-color 0.3s ease, box-shadow 0.3s ease;
-      box-sizing: border-box;
-    }
-    input:focus, textarea:focus {
-      outline: none;
-      border-color: #3498db;
-      box-shadow: 0 0 5px rgba(52, 152, 219, 0.3);
-    }
-    textarea {
-      resize: vertical;
-      min-height: 120px;
-    }
-    button {
-      background-color: #3498db;
-      color: #ffffff;
-      padding: 0.8rem 1.5rem;
-      border: none;
-      border-radius: 6px;
-      font-size: 1rem;
-      font-weight: 500;
-      cursor: pointer;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-      width: 100%;
-    }
-    button:hover {
-      background-color: #2980b9;
-      transform: translateY(-2px);
-    }
-    button:active {
-      transform: translateY(0);
-    }
-    #message {
-      margin-top: 1rem;
-      font-size: 0.9rem;
-      font-weight: 500;
-      color: #27ae60;
-      opacity: 0;
-      transition: opacity 0.5s ease;
-    }
-    #message.show {
-      opacity: 1;
-    }
-  </style>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="container">
-    <h2>Submit Your Feedback</h2>
-    <div class="input-group">
-      <label for="name">Your Name</label>
-      <input type="text" id="name" placeholder="Enter your name" required>
-    </div>
-    <div class="input-group">
-      <label for="feedback">Your Feedback</label>
-      <textarea id="feedback" placeholder="Share your thoughts" rows="5" required></textarea>
-    </div>
-    <button onclick="submitFeedback()">Submit Feedback</button>
-    <div id="message"></div>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+  <div class="max-w-md mx-auto bg-white p-8 rounded-lg shadow-md">
+    <h1 class="text-2xl font-bold mb-6 text-center">MERN Stack Session Feedback</h1>
+    <form id="feedbackForm" action="https://your-feedback-app.vercel.app/api/feedback" method="POST">
+      <div class="mb-4">
+        <label class="block text-gray-700">Name (Optional)</label>
+        <input
+          type="text"
+          name="name"
+          class="w-full p-2 border rounded"
+          placeholder="Enter your name (optional)"
+        />
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700">Rating (1–5)</label>
+        <select name="rating" class="w-full p-2 border rounded" required>
+          <option value="" disabled selected>Select a rating</option>
+          <option value="1">1 - Poor</option>
+          <option value="2">2 - Fair</option>
+          <option value="3">3 - Good</option>
+          <option value="4">4 - Very Good</option>
+          <option value="5">5 - Excellent</option>
+        </select>
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700">Feedback</label>
+        <textarea
+          name="feedback"
+          class="w-full p-2 border rounded"
+          rows="5"
+          placeholder="Share your feedback about the session"
+          required
+        ></textarea>
+      </div>
+      <button
+        type="submit"
+        class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600"
+      >
+        Submit Feedback
+      </button>
+    </form>
+    <p id="message" class="mt-4 text-center text-green-500 hidden"></p>
   </div>
-
   <script>
-    async function submitFeedback() {
-      const name = document.getElementById('name').value;
-      const feedback = document.getElementById('feedback').value;
-      const messageDiv = document.getElementById('message');
-
-      if (!name || !feedback) {
-        messageDiv.style.color = '#c0392b';
-        messageDiv.textContent = 'Please fill out both fields.';
-        messageDiv.classList.add('show');
-        return;
-      }
-
+    document.getElementById('feedbackForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const form = e.target;
+      const formData = new FormData(form);
+      const data = {
+        name: formData.get('name') || 'Anonymous',
+        feedback: formData.get('feedback'),
+        rating: parseInt(formData.get('rating')),
+      };
+      const message = document.getElementById('message');
       try {
-        const response = await fetch('/api/feedback', {
+        const response = await fetch(form.action, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ name, feedback })
+          body: JSON.stringify(data),
         });
-
         if (response.ok) {
-          messageDiv.style.color = '#27ae60';
-          messageDiv.textContent = `Thank you, ${name}, for your feedback!`;
-          messageDiv.classList.add('show');
-          document.getElementById('name').value = '';
-          document.getElementById('feedback').value = '';
-          setTimeout(() => {
-            messageDiv.classList.remove('show');
-            setTimeout(() => { messageDiv.textContent = ''; }, 500);
-          }, 3000);
+          message.textContent = 'Feedback submitted successfully!';
+          message.classList.remove('hidden', 'text-red-500');
+          message.classList.add('text-green-500');
+          form.reset();
         } else {
-          messageDiv.style.color = '#c0392b';
-          messageDiv.textContent = 'Error submitting feedback.';
-          messageDiv.classList.add('show');
+          message.textContent = 'Error submitting feedback. Please try again.';
+          message.classList.remove('hidden', 'text-green-500');
+          message.classList.add('text-red-500');
         }
       } catch (error) {
-        messageDiv.style.color = '#c0392b';
-        messageDiv.textContent = 'Error: ' + error.message;
-        messageDiv.classList.add('show');
+        message.textContent = 'Error connecting to server. Please try again later.';
+        message.classList.remove('hidden', 'text-green-500');
+        message.classList.add('text-red-500');
       }
-    }
+    });
   </script>
 </body>
 </html>
