--- a/public/viewFeedback.html
+++ b/public/viewFeedback.html
@@ -3,100 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>View Feedback</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-      background: linear-gradient(135deg, #e6e9f0 0%, #eef1f5 100%);
-    }
-    .container {
-      background: #ffffff;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 600px;
-      text-align: center;
-    }
-    h2 {
-      color: #2c3e50;
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-      font-weight: 600;
-    }
-    #feedback-list {
-      text-align: left;
-      margin-top: 1.5rem;
-    }
-    .feedback-item {
-      border-bottom: 1px solid #dcdcdc;
-      padding: 1rem 0;
-    }
-    .feedback-item:last-child {
-      border-bottom: none;
-    }
-    .feedback-name {
-      font-weight: 500;
-      color: #2c3e50;
-    }
-    .feedback-text {
-      color: #34495e;
-      margin: 0.5rem 0;
-    }
-    .feedback-date {
-      font-size: 0.8rem;
-      color: #7f8c8d;
-    }
-    #message {
-      margin-top: 1rem;
-      font-size: 0.9rem;
-      font-weight: 500;
-      color: #c0392b;
-    }
-  </style>
+  <title>Admin - View Feedback</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="container">
-    <h2>Feedback List</h2>
-    <div id="feedback-list"></div>
-    <div id="message"></div>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+  <div class="max-w-2xl mx-auto bg-white p-8 rounded-lg shadow-md">
+    <h1 class="text-2xl font-bold mb-6 text-center">Feedback Submissions</h1>
+    <div id="loginForm" class="mb-4">
+      <form id="adminLogin">
+        <div class="mb-4">
+          <label class="block text-gray-700">Password</label>
+          <input
+            type="password"
+            id="password"
+            class="w-full p-2 border rounded"
+            placeholder="Enter admin password"
+            required
+          />
+        </div>
+        <button
+          type="submit"
+          class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-600"
+        >
+          Login
+        </button>
+      </form>
+      <p id="error" class="mt-4 text-center text-red-500 hidden"></p>
+    </div>
+    <div id="feedbackList" class="hidden space-y-4"></div>
   </div>
-
   <script>
-    async function loadFeedback() {
-      const messageDiv = document.getElementById('message');
-      const feedbackList = document.getElementById('feedback-list');
-
+    document.getElementById('adminLogin').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const password = document.getElementById('password').value;
+      const error = document.getElementById('error');
+      const loginForm = document.getElementById('loginForm');
+      const feedbackList = document.getElementById('feedbackList');
       try {
-        const response = await fetch('/api/feedback');
+        const response = await fetch(`https://your-feedback-app.vercel.app/api/feedback?password=${password}`);
         if (response.ok) {
           const feedbacks = await response.json();
+          loginForm.classList.add('hidden');
+          error.classList.add('hidden');
+          feedbackList.classList.remove('hidden');
           if (feedbacks.length === 0) {
-            feedbackList.innerHTML = '<p>No feedback available.</p>';
+            feedbackList.innerHTML = '<p class="text-center text-gray-500">No feedback submitted yet.</p>';
           } else {
-            feedbackList.innerHTML = feedbacks.map(f => `
-              <div class="feedback-item">
-                <div class="feedback-name">${f.name}</div>
-                <div class="feedback-text">${f.feedback}</div>
-                <div class="feedback-date">${new Date(f.createdAt).toLocaleString()}</div>
+            feedbackList.innerHTML = feedbacks.map(fb => `
+              <div class="p-4 border rounded">
+                <p><strong>Name:</strong> ${fb.name}</p>
+                <p><strong>Rating:</strong> ${fb.rating}/5</p>
+                <p><strong>Feedback:</strong> ${fb.feedback}</p>
+                <p class="text-sm text-gray-500"><strong>Date:</strong> ${new Date(fb.createdAt).toLocaleString()}</p>
               </div>
             `).join('');
           }
         } else {
-          messageDiv.textContent = 'Error fetching feedback.';
+          error.textContent = 'Invalid password';
+          error.classList.remove('hidden');
         }
       } catch (error) {
-        messageDiv.textContent = 'Error: ' + error.message;
+        error.textContent = 'Error connecting to server';
+        error.classList.remove('hidden');
       }
-    }
-
-    // Load feedback when the page loads
-    window.onload = loadFeedback;
+    });
   </script>
 </body>
 </html>
