--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
   <div class="bg-white rounded-lg shadow-lg p-8 max-w-md w-full">
-    <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Give Your Feedback to Salman</h2>
+    <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">Session Feedback For Salman</h2>
     <form id="feedbackForm" class="space-y-4">
       <div>
         <input 
